liuyi-im-gateway-sk/liuyi-im-gateway-sk.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liuyi-im-gateway-sk
  labels:
    app: liuyi-im-gateway-sk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: liuyi-im-gateway-sk
  template:
    metadata:
      labels:
        app: liuyi-im-gateway-sk
    spec:
      hostAliases:
      - hostnames:
        - "s5"
        ip: "172.17.62.202"
      imagePullSecrets:
      - name: liuyi-regsitry-outer
      containers:
      - name: liuyi-im-gateway-sk
        image: registry.cn-beijing.aliyuncs.com/xiasimuou/liuyi-im-gateway-sk:2.3.4.75.ok-SNAPSHOT
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 33010
          initialDelaySeconds: 5
          timeoutSeconds: 1
        ports:
        - containerPort: 33010
          hostPort: 33010
        - containerPort: 33009
          hostPort: 33009


        volumeMounts:
        - name: logs-mount
          mountPath: /var/log/liuyi/liuyi-im-gateway-sk
        - name: application-mysql
          mountPath: /config/application-mysql.yaml
          subPath: path/to/application-mysql.yaml
        - name: application-redis
          mountPath: /config/application-redis.yaml
          subPath: path/to/application-redis.yaml
        - name: application-k8s
          mountPath: /config/application-k8s.yaml
          subPath: path/to/application-k8s.yaml
        - name: application-rocketmq
          mountPath: /config/application-rocketmq.yaml
          subPath: path/to/application-rocketmq.yaml


      volumes:
        - name: logs-mount
          nfs:
            path: /app/log/
            server: 172.17.62.202
        - name: application-mysql
          configMap:
            name: liuyi-im-config
            defaultMode: 0777
            items:
            - key: application-mysql.yaml
              path: path/to/application-mysql.yaml
        - name: application-redis
          configMap:
            name: liuyi-im-config
            defaultMode: 0777
            items:
            - key: application-redis.yaml
              path: path/to/application-redis.yaml
        - name: application-k8s
          configMap:
            name: liuyi-im-config
            defaultMode: 0777
            items:
            - key: application-k8s.yaml
              path: path/to/application-k8s.yaml
        - name: application-rocketmq
          configMap:
            name: liuyi-im-config
            defaultMode: 0777
            items:
            - key: application-rocketmq.yaml
              path: path/to/application-rocketmq.yaml


---
apiVersion: v1
kind: Service
metadata:
  name: liuyi-im-gateway-sk             # 名称
  labels:
    app: liuyi-im-gateway-sk
spec:
  type: ClusterIP                               # 开发端口的类型
  ports:
  - port: 33010                                 # 通过service来访问的端口
    targetPort: 33010
    protocol: TCP
  - port: 33009                                 # 通过service来访问的端口
    targetPort: 33009
    protocol: TCP
  selector:                                     # service负载的容器需要有同样的labels
    app: liuyi-im-gateway-sk

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: liuyi-im-gateway-sk
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: s5
    http:
      paths:
      - path: /liuyi/gateway
        backend:
          serviceName: liuyi-im-gateway
          servicePort: 33010
